authentication-service/k8s/manifests/0-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auth-service
  labels:
    # monitoring: prometheus
    istio-injection: enabled # Add a namespace label to instruct Istio to automatically inject Envoy sidecar proxies when you deploy your application
