authentication-service/k8s/manifests/11-auth-service-peer-authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: auth-service-peer-authentication
  namespace: auth-service
spec:
  mtls:
    mode: STRICT
