authentication-service/k8s/manifests/7-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: auth-service-server
  name: auth-service-server
  namespace: auth-service
  # annotations:
  #   prometheus.io/port: "metrics"
  #   prometheus.io/scrape: "true"
spec:
  type: ClusterIP
  ports:
  # - name: proxy
  #   port: 5055
  #   protocol: TCP
  #   targetPort: proxy
  # - name: proxy-metric
  #   port: 9901
  #   protocol: TCP
  #   targetPort: proxy-metric
  - name: http
    port: 3000
    protocol: TCP
    targetPort: http
  # - name: metrics
  #   port: 9000
  #   protocol: TCP
  #   targetPort: metrics
  selector:
    app.kubernetes.io/app: auth-service
