authentication-service/k8s/manifests/8-destination-rule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: auth-service-destination-rule
  namespace: auth-service
spec:
  host: auth-service-server.auth-service.svc.cluster.local
  subsets:
    - name: v1
      labels:
        app.kubernetes.io/app: auth-service
        version: v1
    - name: v2
      labels:
        app.kubernetes.io/app: auth-service
        version: v2
