authentication-service/k8s/manifests/9-virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: auth-service-route
  namespace: auth-service
spec:
  hosts:
  - auth-service-server.auth-service.svc.cluster.local # DNS for internal access
  - app.service.api # DNS for external access
  gateways:
    - auth-service/api # The name of gateway (9-gateway.yaml)
  http:
  - name: "auth-service-route"
    match:
    - uri:
        prefix: /
    timeout: 5s # 5 second timeout for requests to the auth service. If the service does not respond within this time, the request will fail gracefully
    route:
    - destination:
        host: auth-service-server.auth-service.svc.cluster.local
        subset: v1
      weight: 90
    - destination:
        host: auth-service-server.auth-service.svc.cluster.local
        subset: v2
      weight: 10
